fixed word wrap bug where one long unbroken word would clip outside of its container

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -45,6 +45,10 @@ hr {
   border-top: 4px solid #1f2b22
 }
 
+.word-wrap {
+  word-wrap: break-word;
+}
+
 /* .tweet-footer {
   display: flex;
   align-items: center;
